--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "client_id": "dbfc8ae3c1a0b8209e71",
     "client_secret": "bc6f3b8f63149406866cc4dd97a2498fbd776828",
     "title": "robotics",
-    "instruction": "基于GitHub issue的个人博客模板",
+    "instruction": "一步一步，努力解决问题的毫不动摇的信念",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "pin_links": {
     },
