--- a/config.json
+++ b/config.json
@@ -8,6 +8,9 @@
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "pin_links": {
     },
+    "pin_links": {
+        "some-idea":"https://nikolalm.github.io/some-idea",
+    },
     "friends": {
         "nikolalm" : "https://nikolalm.github.io"
     },
