--- a/config.json
+++ b/config.json
@@ -19,5 +19,13 @@
             "hidden_img" : null,
             "width" : 0
         }
+
+        "QQ": {
+            "icon_src": "images/QQ.svg",
+            "href": "tencent://message/?uin=1137705668",
+            "width": 0
+        }
+
+        }
     }
 }
