--- a/config.json
+++ b/config.json
@@ -19,6 +19,11 @@
             "hidden_img" : null,
             "width" : 0
         }
+        "QQ": {
+            "icon_src": "images/QQ.svg",
+            "href": "tencent://message/?uin=1137705668",
+            "width": 0
+        }
 
         }
 }
